container and links

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
     <h2>@container</h2>
     <h3>fluid container</h3>
-    <div>This is fluid container and it will go till the end of Page</div>
+    <div class="container">This is fluid container and it will go till the end of Page</div>
     <h3>centered container</h3>
-    <div>This is centered container and it will go till the specified width</div>
+    <div class="container container-centered">This is centered container and it will go till the specified width</div>
     <hr>
     
     <h2>@links</h2>
-    <a href = "/">Primary link</a>
-    <a href = "/">Secondary link</a>
+    <a class="link link-primary"href = "/">Primary link</a>
+    <a class="link link-secondary"href = "/">Secondary link</a>
     <hr>
 
     <h2>@lists</h2>
