--- a/index.html
+++ b/index.html
@@ -39,25 +39,27 @@
 
     <h2>@lists</h2>
     <h3>Unordered list</h3>
-    <ul>
+    <p>This list will not have the bullets</p>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
     </ul>
 
     <h3>Unordered Inline list</h3>
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-inline">Inline Item One</li>
+        <li class="list-inline">Inline Item Two</li>
+        <li class="list-inline">Inline Item Three</li>
     </ul>
 
     <h3>Reverse Ordered list</h3>
-    <ul>
+    <ol reversed>
         <li>Milk</li>
         <li>Eggs</li>
         <li>Chocolate</li>
-    </ul>
+    </ol>
+    <hr>
 
     <h2>@nav</h2>
     <nav>
