navigation and header

--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@
     <hr>
 
     <h2>@nav</h2>
-    <nav>
-        <div>IamBrand</div>
-        <ul>
-            <li>
-                <a href = "/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">Developer</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link link-active"href = "/">Home</a>
             </li>
-            <li>
-                <a href = "/">Products</a>
+            <li class="list-inline">
+                <a class="link"href = "/">Products</a>
             </li>
-            <li>
-                <a href = "/">About</a>
+            <li class="list-inline">
+                <a class="link"href = "/">About</a>
             </li>
         </ul>
     </nav>
     <hr>
 
     <h2>@header</h2>
-    <header>
-        <img src= "image/Hero.svg">
-        <h2>heading inside hero</h2>
+    <header class="hero">
+        <img class="hero-image" src= "image/Hero.svg">
+        <h1 class="hero-heading">Darshan the <span class="heading-inverted">Web Developer</span></h1>
     </header>
 
     <hr>
