added blogs and modified some pages

--- a/blogs.html
+++ b/blogs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <link href="/styles.css" rel="Stylesheet" />
     <title>Blogs</title>
 </head>
+
 <body>
-    
+
     <nav class="navigation container">
         <div class="nav-brand">IamDeveloper</div>
         <ul class="list-non-bullet nav-pills">
@@ -24,10 +26,78 @@
         </ul>
     </nav>
 
-
-    <header class="hero">
+    <header class="hero hero-blogs">
         <h1 class="hero-heading">My <span class="heading-inverted">Blogs</span></h1>
+        <img class="hero-image" src="image/Hero.svg">
+        <h1 class="hero-heading">Darshan the <span class="heading-inverted">Web Developer</span></h1>
     </header>
 
+    <section class="section ow">
+        <ul class="list-non-bullet">
+            <li>
+                <div class="container container-centered">
+                    <h2><a class="link link-blogs" href="introduction_to_prog.html">Introduction to programming</a>
+                    </h2>
+                    <small>15th April, 2021</small>
+                    <p>Are you aiming to become a software engineer one day? Then you are in the right place because
+                        through this article you will get a brief introduction to programming</p>
+
+                </div>
+
+            </li>
+
+            <li>
+
+                <div class="container container-centered">
+                    <h2><a class="link link-blogs" href="types_of_prog_lang.html">Types of programming languages</a>
+                    </h2>
+                    <small>15th April, 2021</small>
+                    <p>Find out about some of the most popular programming languages used in today's world</p>
+
+                </div>
+
+            </li>
+
+            <li>
+
+                <div class="container container-centered">
+                    <h2><a class="link link-blogs" href="important_books.html">Important books for your reference</a>
+                    </h2>
+                    <small>16th April, 2021</small>
+                    <p>Find out about some of the most popular books to learn programming languages</p>
+
+                </div>
+
+            </li>
+
+            <li>
+
+                <div class="container container-centered">
+                    <h2><a class="link link-blogs" href="focus.html">Tips to stay focus while programming</a>
+                    </h2>
+                    <small>17th April, 2021</small>
+                    <p>Find out about some of the most important tips to stay focus while programming</p>
+
+                </div>
+
+            </li>
+
+        </ul>
+    </section>
+
+    <footer class="footer">
+        <div class="footer-header">Social media presence</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-inline">
+                <a class="link" href="https://github.com/darshan1059">Github</a></li>
+            <li class="list-inline">
+                <a class="link" href="https://twitter.com/ImDarshan10">Twitter</a></li>
+            <li class="list-inline">
+                <a class="link" href="https://linkedin.com/in/chandradarshanagrawal">Linkedin</a></li>
+        </ul>
+    </footer>
+
+
 </body>
+
 </html>
