--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container container-centered">
             <h1>Projects</h1>
             <p>I like to showcase my work and thus, you can see my projetcs hosted online</p>
-            <a class="link link-secondary" href="/">See Projects</a>
+            <a class="link link-secondary" href="projects.html">See Projects</a>
         </div>
     </section>
 
@@ -50,7 +50,7 @@
         <div class="container container-centered">
             <h1>Blogs</h1>
             <p>I am also working on some marvel movies blogs, kindly check out here</p>
-            <a class="link link-secondary" href="/">Check Blogs</a>
+            <a class="link link-secondary" href="blogs.html">Check Blogs</a>
         </div>
     </section>
 
