--- a/projects.html
+++ b/projects.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/styles.css" rel="Stylesheet" />
-    <title>Projects</title>
+    <title>Projects | adarshvidhyarthi</title>
 </head>
 
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">IamDeveloper</div>
+        <div class="nav-brand">Adarsh-Vidhyarthi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-inline">
                 <a class="link" href="/">Home</a>
@@ -29,7 +29,7 @@
     <header class="hero hero-blogs">
         <h1 class="hero-heading">My <span class="heading-inverted">Projects</span></h1>
         <img class="hero-image" src="image/Hero.svg">
-        <h1 class="hero-heading">Darshan the <span class="heading-inverted">Web Developer</span></h1>
+        <h1 class="hero-heading">Adarsh Vidhyarthi the <span class="heading-inverted">Web Developer</span></h1>
     </header>
 
     <!-- <ol>
