--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | adarshbalika</title>
+    <title>home | adarshvidhyarthi</title>
     <link href="styles.css" rel="Stylesheet" />
 </head>
 
 <body>
 
     <nav class="navigation container">
-        <div class="nav-brand">IamDeveloper</div>
+        <div class="nav-brand">Adarsh-Vidhyarthi</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-inline">
                 <a class="link link-active" href="/">Home</a>
@@ -28,7 +28,7 @@
 
     <header class="hero">
         <img class="hero-image" src="image/Hero.svg">
-        <h1 class="hero-heading">Darshan the <span class="heading-inverted">Web Developer</span></h1>
+        <h1 class="hero-heading">Adarsh Vidhyarthi the <span class="heading-inverted">Web Developer</span></h1>
     </header>
 
     <section class="section ow">
