--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="section ow">
         <div class="container container-centered">
             <h1>Blogs</h1>
-            <p>I am also working on some marvel movies blogs, kindly check out here</p>
+            <p>I am also working on some technical blogs, kindly check out here and share with your friends</p>
             <a class="link link-primary" href="blogs.html">Check Blogs</a>
         </div>
     </section>
