--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
                     <small>14th May,2021</small>
                     <p> Do you know the meaning of every emoji? lets check it out..!! </p>
     
-                    <a class="link link-primary" href="https://qib6l.codesandbox.io/">Live Project</a>
+                    <a class="link link-primary" href="https://4eccf.codesandbox.io/">Live Project</a>
                     <a class="link link-secondary" href="https://github.com/darshan1059/emoji-interpreter">View Source</a>
     
                 </div>
