update musicala project

--- a/projects.html
+++ b/projects.html
@@ -130,7 +130,7 @@
                     <small>18th May,2021</small>
                     <p> Do you know the top chartbuster songs of every genre? lets check it out..!!</p>
     
-                    <a class="link link-primary" href="https://yqr20.codesandbox.io/">Live Project</a>
+                    <a class="link link-primary" href="https://dly05.codesandbox.io/">Live Project</a>
                     <a class="link link-secondary" href="https://github.com/darshan1059/Musicala">View Source</a>
     
                 </div>
