--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
                     </h2>
                     <small>15th April, 2021</small>
                     <p>Are you aiming to become a software engineer one day? Then you are in the right place because
-                        through this article you will get a brief introduction to programming</p>
+                        through this article you will get a brief introduction to programming.</p>
 
                 </div>
 
@@ -52,7 +52,7 @@
                     <h2><a class="link link-blogs" href="types_of_prog_lang.html">Types of programming languages</a>
                     </h2>
                     <small>15th April, 2021</small>
-                    <p>Find out about some of the most popular programming languages used in today's world</p>
+                    <p>Find out about some of the most popular programming languages used in today's world.</p>
 
                 </div>
 
@@ -64,7 +64,7 @@
                     <h2><a class="link link-blogs" href="important_books.html">Important books for your reference</a>
                     </h2>
                     <small>16th April, 2021</small>
-                    <p>Find out about some of the most popular books to learn programming languages</p>
+                    <p>Find out about some of the most popular books to learn programming languages.</p>
 
                 </div>
 
@@ -76,7 +76,7 @@
                     <h2><a class="link link-blogs" href="focus.html">Tips to stay focus while programming</a>
                     </h2>
                     <small>17th April, 2021</small>
-                    <p>Find out about some of the most important tips to stay focus while programming</p>
+                    <p>Find out about some of the most important tips to stay focus while programming.</p>
 
                 </div>
 
