fix; details of triangle project

--- a/projects.html
+++ b/projects.html
@@ -146,7 +146,7 @@
                 <div class="container container-centered">
                     <h1>Fun with Triangle </h1>
                     <small>26th August,2021</small>
-                    <p> This app tells you whether three angles make a triangle or not and also helps to calculate area, hypotenuse. It has basic quiz on triangles also..!  </p>
+                    <p> This app tells you whether three angles make a triangle or not? and also helps to calculate the area, hypotenuse of a triangle. It also has basic quiz on triangles..!  </p>
     
                     <a class="link link-primary" href="https://triangle-with-fun.netlify.app/">Live Project</a>
                     <a class="link link-secondary" href="https://github.com/darshan1059/fun-with-triangle">View Source</a>
