--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,11 @@
                     </h2>
                     <small>15th April, 2021</small>
                     <p>Are you aiming to become a software engineer one day? Then you are in the right place because
-                        through this article you will get a brief introduction to programming.</p>
+                        through this article you will get a brief introduction to programming.
+                    </p>
+
+                    <a class="link link-secondary" href="introduction_to_prog.html">Read more</a>
+                        
 
                 </div>
 
@@ -53,6 +57,7 @@
                     </h2>
                     <small>15th April, 2021</small>
                     <p>Find out about some of the most popular programming languages used in today's world.</p>
+                    <a class="link link-secondary" href="types_of_prog_lang.html">Read more</a>
 
                 </div>
 
@@ -65,6 +70,7 @@
                     </h2>
                     <small>16th April, 2021</small>
                     <p>Find out about some of the most popular books to learn programming languages.</p>
+                    <a class="link link-secondary" href="important_books.html">Read more</a>
 
                 </div>
 
@@ -77,6 +83,7 @@
                     </h2>
                     <small>17th April, 2021</small>
                     <p>Find out about some of the most important tips to stay focus while programming.</p>
+                    <a class="link link-secondary" href="focus.html">Read more</a>
 
                 </div>
 
