--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="section ow">
         <div class="container container-centered">
             <h1>Technologies</h1>
-            <p>I am familier with HTML5, CSS, Git, JavaScript, NodeJS, C#, Asp.net, MVC.net</p>
+            <p>I am familier with HTML5, CSS, Git, JavaScript, NodeJS, ReactJS, VanillaJS, C#, Asp.net, MVC.net</p>
         </div>
     </section>
 
