fix: linkedIn link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li class="list-inline">
                 <a class="link" href="https://twitter.com/ImDarshan10">Twitter</a></li>
             <li class="list-inline">
-                <a class="link" href="https://linkedin.com/in/chandradarshanagrawal">Linkedin</a></li>
+                <a class="link" href="https://www.linkedin.com/in/chandra-darshan-agrawal-1459901a3/">Linkedin</a></li>
         </ul>
     </footer>
 
