--- a/projects.html
+++ b/projects.html
@@ -43,9 +43,9 @@
                         really
                         knows you </p>
 
-                    <a class="link link-primary" href="https://replit.com/@DarshanA10/Doyouknowme?embed=true">Live
+                    <a class="link link-primary" href="https://replit.com/@DarshanA10/Doyouknowme?embed=true" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/Do_you_know_me">View Source</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/Do_you_know_me" target="_blank">View Source</a>
 
                 </div>
 
@@ -57,9 +57,9 @@
                     <small>8th April,2021</small>
                     <p> Do you know marvel cinematic universe? Let's play a quiz and test your knowledge. </p>
 
-                    <a class="link link-primary" href="https://replit.com/@DarshanA10/EndGame?embed=true">Live
+                    <a class="link link-primary" href="https://replit.com/@DarshanA10/EndGame?embed=true" target="_blank">Live
                         Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/Marvels_quiz">View Source</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/Marvels_quiz" target="_blank">View Source</a>
 
 
                 </div>
@@ -73,8 +73,8 @@
                     <p> Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use
                         the translator to convert your text from English to Minion speak or Banana language. </p>
 
-                    <a class="link link-primary" href="https://minionsbanana.netlify.app">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/banana-speak">View Source</a>
+                    <a class="link link-primary" href="https://minionsbanana.netlify.app" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/banana-speak" target="_blank">View Source</a>
 
                 </div>
 
@@ -88,8 +88,8 @@
                         language spoken by the Na'vi people in the fictional world Pandora in James Cameron's
                         blockbuster movie Avatar. </p>
 
-                    <a class="link link-primary" href="https://n-translator.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/Navi-translator">View Source</a>
+                    <a class="link link-primary" href="https://n-translator.netlify.app/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/Navi-translator" target="_blank">View Source</a>
 
                 </div>
 
@@ -101,8 +101,8 @@
                     <small>14th May,2021</small>
                     <p> Do you know the meaning of every emoji? lets check it out..!! </p>
 
-                    <a class="link link-primary" href="https://4eccf.codesandbox.io/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/emoji-interpreter">View
+                    <a class="link link-primary" href="https://4eccf.codesandbox.io/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/emoji-interpreter" target="_blank">View
                         Source</a>
 
                 </div>
@@ -115,8 +115,8 @@
                     <small>18th May,2021</small>
                     <p> Do you know the top chartbuster songs of every genre? lets check it out..!!</p>
 
-                    <a class="link link-primary" href="https://dly05.codesandbox.io/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/Musicala">View Source</a>
+                    <a class="link link-primary" href="https://dly05.codesandbox.io/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/Musicala" target="_blank">View Source</a>
 
                 </div>
 
@@ -130,8 +130,8 @@
                         number of notes that has to be returned to the customer on the basis of bill amount and cash
                         given by the customer." </p>
 
-                    <a class="link link-primary" href="https://cash-register-controller.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/Cash-Register">View Source</a>
+                    <a class="link link-primary" href="https://cash-register-controller.netlify.app/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/Cash-Register" target="_blank">View Source</a>
 
                 </div>
 
@@ -144,8 +144,8 @@
                     <p> Ever thought about your luck?. Use this fun app which checks whether your birthday is lucky or
                         not based on your lucky number..!! </p>
 
-                    <a class="link link-primary" href="https://lucky-dateofbirth.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/Lucky-Birthday">View Source</a>
+                    <a class="link link-primary" href="https://lucky-dateofbirth.netlify.app/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/Lucky-Birthday" target="_blank">View Source</a>
 
                 </div>
 
@@ -158,8 +158,8 @@
                     <p> This app tells you whether three angles make a triangle or not? and also helps to calculate the
                         area, hypotenuse of a triangle. It also has basic quiz on triangles..! </p>
 
-                    <a class="link link-primary" href="https://triangle-with-fun.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/fun-with-triangle">View
+                    <a class="link link-primary" href="https://triangle-with-fun.netlify.app/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/fun-with-triangle" target="_blank">View
                         Source</a>
 
                 </div>
@@ -174,8 +174,8 @@
                         not, it finds the number of days by which you missed it and tells you the nearest palindrome
                         date. </p>
 
-                    <a class="link link-primary" href="https://palindrome-bdays.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/palindrome-birthday">View
+                    <a class="link link-primary" href="https://palindrome-bdays.netlify.app/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/palindrome-birthday" target="_blank">View
                         Source</a>
 
                 </div>
@@ -189,8 +189,8 @@
                     <p> Puzzled while calculating profit/loss?. Use this app to calculate how much profit or loss you
                         are having on your stocks..! </p>
 
-                    <a class="link link-primary" href="https://stocks-calci.netlify.app/">Live Project</a>
-                    <a class="link link-secondary" href="https://github.com/darshan1059/stocks-calculator">View
+                    <a class="link link-primary" href="https://stocks-calci.netlify.app/" target="_blank">Live Project</a>
+                    <a class="link link-secondary" href="https://github.com/darshan1059/stocks-calculator" target="_blank">View
                         Source</a>
 
                 </div>
